# airy-spot-widget

./: .gitignore  LICENSE  README.md  example.ipynb  example.md  myst.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  publish-to-pypi.yml  release.yml
airy_spot_widget/: __init__.py  widget.py
src/: widget.css  widget.js
