[build-system]
requires = ["hatchling>=1.26", "hatch-jupyter-builder"]
build-backend = "hatchling.build"

[project]
authors = [{ name = "Sander Senhorst", email = "s.senhorst@tudelft.nl" }]
name = "airy-spot-widget"
version = "0.1.0"
requires-python = ">= 3.12, <3.14"
dependencies = [
	"anywidget>=0.9.18,<1",
	"ipykernel>=7.2.0,<8",
	"notebook>=7.5.6,<8",
	"pip>=26.1.2",
	"traitlets>=5.14.3,<6",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensure-npm-installed = true
npm = ["npm"]
build-command = "build"

[tool.hatch.build.targets.wheel]
packages = ["airy_spot_widget"]

[tool.hatch.build]
include = ["airy_spot_widget/static"]

[tool.hatch.build.targets.sdist]
include = [
    "/airy_spot_widget",
	"/src",
    "/package.json",
    "/package-lock.json",
    "/README.md",
]
